// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select has multiple 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="false"
            for="best"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby=" mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Ack, Bar
            </div>
            <input
              name="best"
              type="hidden"
              value="bar,ack"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-69 MuiSelect-icon-31"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="false"
          for="best"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Ack, Bar
          </div>
          <input
            name="best"
            type="hidden"
            value="bar,ack"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-69 MuiSelect-icon-31"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select renders using menu items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="true"
            for="best"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby=" mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Bar
            </div>
            <input
              name="best"
              type="hidden"
              value="bar"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-69 MuiSelect-icon-31"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="true"
          for="best"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Bar
          </div>
          <input
            name="best"
            type="hidden"
            value="bar"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-69 MuiSelect-icon-31"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select renders without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="false"
            for="best"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby=" mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Bar
            </div>
            <input
              name="best"
              type="hidden"
              value="bar"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-69 MuiSelect-icon-31"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="false"
          for="best"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Bar
          </div>
          <input
            name="best"
            type="hidden"
            value="bar"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-69 MuiSelect-icon-31"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
